# CSolid

./: .gitignore  .gitmodules  CMakeLists.txt  element.c  element.h  main.c  material.c  material.h  model.c  model.h  node.c  node.h  section.c  section.h  test.csolid
elements/: bar.c  bar.h
lib/: chunk.c  chunk.h  compiler.c  compiler.h  lexer.c  lexer.h  memory.c  memory.h  object.c  object.h  value.c  value.h  vm.c  vm.h
lib/interpreter/: byte_code.h  compiler.c  compiler.h  lexer.h  vm.c  vm.h
lib/model/: element.c  element.h  material.c  material.h  model.c  model.h  node.c  section.c  section.h
lib/model/elements/: bar.c  bar.h
